--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
     </footer>
     
     <!-- Scripts -->
-    <script src="js/articulo.js'"></script>
+    <script src="static/js/articulo.js'"></script>
 
 
     <script>
