--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Mi Portfolio{% endblock %}</title>
+    <title>Mi Portfolio</title>
     <link rel="stylesheet" href="static/css/style_depur.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
