--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <div class="icono-item"><img src="/mi-portfolio/static/images/R.png" class="icono-competencia"><span>R</span></div>
                 <div class="icono-item"><img src="/mi-portfolio/static/images/bash.png" class="icono-competencia"><span>Bash</span></div>
                 <div class="icono-item"><img src="/mi-portfolio/static/images/SQL.png" class="icono-competencia"><span>SQL</span></div>
-                <div class="icono-item"><img src="/mi-portfolio/static/images/js.png" class="icono-competencia"><span>JavaScript</span></div>
+                <div class="icono-item"><img src="/mi-portfolio/static/images/JS.PNG" class="icono-competencia"><span>JavaScript</span></div>
             </div>
         
             <hr>
