--- a/index.html
+++ b/index.html
@@ -535,12 +535,14 @@
                 <span class="herramienta">Bcftools</span>
                 <span class="herramienta">Sniffles</span>
                 <span class="herramienta">IGV</span>
+                <span class="herramienta">Emboss</span>
+                <span class="herramienta">BLAST</span>
+                <span class="herramienta">Methylartist</span>
             </div>
         
             <p class="subtitulo">Transcriptómica / RNA-seq</p>
             <div class="bloque-herramientas">
                 <span class="herramienta">FastQC</span>
-                <span class="herramienta">MultiQC</span>
                 <span class="herramienta">STAR</span>
                 <span class="herramienta">featureCounts</span>
                 <span class="herramienta">EdgeR</span>
