--- a/index.html
+++ b/index.html
@@ -589,10 +589,10 @@
               <div class="sidebar-herramientas">
                 <h4> Herramientas Favoritas</h4>
                 <ul>
-                  <li>🐍 Python</li>
-                  <li>🐘 PostgreSQL</li>
-                  <li>💻 Bash</li>
-                  <li>🌐 Flask</li>
+                  <li>Python</li>
+                  <li>PostgreSQL</li>
+                  <li>Bash</li>
+                  <li>Flask</li>
                 </ul>
                 <h4>Publicaciones</h4>
                 <ul>
