--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                           </div>
                           <div class="slide">
                             <video controls>
-                              <source src="static/images/video.mp4">
+                              <source src="static/images/video2.mp4">
                             </video>
                           </div>
                           
