--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </ul>
                   </li>
                   <li>
-                    <a href="mailto:eva.lopez@email.com" class="contact">
+                    <a href="mailto:emlopez@cebas.csic.es" class="contact">
                       📩Contacta conmigo
                     </a>
                   </li>
